# ZAVOD_test_case

./: .gitignore  README.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/infra/: docker-compose.yml
backend/news/: Dockerfile  db.json  requirements.txt
backend/news/api_v1/: consumers.py  filters.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/news/core/: pagination.py
backend/news/core/context_processors/: year.py
backend/news/news/: asgi.py  settings.py  urls.py
backend/news/posts/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/news/posts/migrations/: 0001_initial.py  0002_initial.py  0003_favorites_status.py  0004_alter_post_author_alter_post_tag.py  0005_remove_favorites_favoriteuniq.py  0006_post_views_count.py  0007_ip.py  0008_remove_post_views_count_post_views.py
backend/news/static/css/: my.css
backend/news/static/js/: likes.js  main.js  script.js  scroll.js
backend/news/templates/: base.html
backend/news/templates/includes/: footer.html  header.html
backend/news/templates/posts/: index.html  post_detail.html  top_views.html
backend/news/templates/users/: login.html
backend/news/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/news/users/migrations/: 0001_initial.py
frontend/: client.js  index.html  script.js
