[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rashid Ayoupov <valentaine1234@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
drf-extra-fields = "^3.7.0"
channels = {extras = ["daphne"], version = "^4.1.0"}
django-cors-headers = "^4.3.1"
djoser = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
autoflake = "^2.3.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
